# whispin

./: .gitignore  README.md  index.html  package-lock.json  package.json  scan.html  settings.html  vite.config.ts
docs/: index.html
docs/media/: README.md
scripts/: build.ps1  check.ps1  dev.ps1
src/: main.ts  notch.ts  recorder.ts  settings.css  settings.ts  styles.css  visualizer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_ducking.rs  crypto.rs  dictionary.rs  lib.rs  main.rs  ocr.rs  scan_overlay.rs  settings.rs  setup.rs  startup.rs  state.rs  transcribe.rs  trigger.rs
src/settings/: api-keys-section.ts  app-section.ts  dictionary-section.ts  dom.ts  key-labels.ts  llm-section.ts  recording-section.ts  trigger-section.ts  types.ts
